2002-02-08 Daniel Horn <hellcatv@hotmail.com>
	* Added Day/Year tag to system
	* Removed velocity tag from system (besides it should have been speed...misleading)
	* Added ability to slow down simulations in other star systems so they won't bog down the game
	
2002-02-07 Daniel Horn <hellcatv@hotmail.com>
	* Completed VIEW VDU segment
	* Completed Asteroids that don't crash with anything but units
	* Worked on Debug options for geometry-corrupting vertex arrays
	* Finished Asteroid generator
	* Added more camera views
	* Added more VDU options
	* Fixed Explosions (sometimes they wouldn't show up. now they do)
	* Added Wormholes as an option
	
2002-02-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* set the color of planets in the radar to blue
	* begun to write a new targetting scheme
	  (not working, not used yet)

	
2002-02-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* various improvements on missions:
	  - moved benchmarking/gametime from main_loop.cpp to director
	  - message display shows the time when the message came
	  - added a delay to the messages
	* modified my systems to use new texture dirs

	
2002-02-03 Daniel Horn <hellcatv@hotmail.com>
	* Added splash screens... it's a variable in vegastrike.config defaults to vega_splash.ani  found in animations/vega_splash.ani

	
2002-02-03 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified easydom.cpp/h and mission.cpp/h
	  so that these classes can be used without the rest
	  of Vegastrike (for the mission selector)
	
	
2002-02-02 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Added textures to merchant ship
	* Committed better system and testmission for "Cunerpicus"

2002-01-30 Daniel Horn <hellcatv@hotmail.com>
	* Added nebulas to the list of vegastrike's features
	* Added explosions to the nebulas that make them glow from time to time
	* Added fog to nebulas so that things inside them will be fogged